# LogicLens-AI

./: Dockerfile  README.md  agents-cli-manifest.yaml  cloudbuild.yaml  pyproject.toml
backend/: logiclens.db  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  live_adk_analysis.py  live_mcp_coordinator.py
backend/app/api/: __init__.py  byok.py  reports.py  scans.py  websocket.py
backend/app/core/: __init__.py  byok.py  config.py  llm.py  llm_usage.py  pdf_gen.py  report_gen.py
backend/app/db/: __init__.py  crud.py  database.py
backend/app/models/: __init__.py  finding.py  report.py  scan.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/ui/: AnimatedCounter.jsx  AnimatedProgressBar.jsx  DashboardLayout.jsx  DashboardSidebar.jsx  EmptyState.jsx  ErrorState.jsx  GlassCard.jsx  GradientButton.jsx  KeyAccessModal.jsx  LoadingSkeleton.jsx  Navbar.jsx  ProgressRing.jsx  RiskBadge.jsx  StatusBadge.jsx
frontend/src/pages/: Dashboard.jsx  Landing.jsx  NewScan.jsx  NotFound.jsx  ReportView.jsx  Reports.jsx  ScanView.jsx
frontend/src/services/: api.js  websocket.js
frontend/src/stores/: scanStore.js
logiclens_agent/: __init__.py  agent.py  fast_api_app.py  mcp_server.py  passive_tools.py
logiclens_agent/skills/passive_security/: SKILL.md
